로그인 랜딩 수정 및 종목노출 카테고리별 추가

--- a/bigs/stocks/templates/stocks/base_generic.html
+++ b/bigs/stocks/templates/stocks/base_generic.html
@@ -16,7 +16,9 @@
 					<h1>Bigs</h1>
 					<h3>세상의 모든 주식정보</h3>
 				</a>
-				<h4>로그인</h4>
+				<a href="{% url 'login' %}">
+					<h4>로그인</h4>
+				</a>
 			</header>
 		{% endblock %}
 
@@ -59,7 +61,7 @@
 		<footer class="footer">
 			푸터
 		</footer>
-		
+
 	</div>
 </body>
 
