--- a/bigs/stocks/templates/stocks/index.html
+++ b/bigs/stocks/templates/stocks/index.html
@@ -4,7 +4,7 @@
 	<div class="box box2">
 		<div class="card card1">
 			<span>단기 후보주</span>
-			{% for stock in stocks %}
+			{% for stock in stocks1 %}
 			<div>
 				<h5>종목</h5>
 				<li>종목명: {{stock.name}}</li>
@@ -15,7 +15,7 @@
 		</div>
 		<div class="card card2">
 			<span>스윙</span>
-			{% for stock in stocks %}
+			{% for stock in stocks2 %}
 			<div>
 				<h5>종목</h5>
 				<li>종목명: {{stock.name}}</li>
@@ -26,7 +26,7 @@
 		</div>
 		<div class="card card3">
 			<span>중장기</span>
-			{% for stock in stocks %}
+			{% for stock in stocks3 %}
 			<div>
 				<h5>종목</h5>
 				<li>종목명: {{stock.name}}</li>
@@ -37,7 +37,7 @@
 		</div>
 		<div class="card card4">
 			<span>테마주</span>
-			{% for stock in stocks %}
+			{% for stock in stocks4 %}
 			<div>
 				<h5>종목</h5>
 				<li>종목명: {{stock.name}}</li>
