로그인 여부에 따른 종목명 노출여부 설정

--- a/bigs/stocks/templates/stocks/base_generic.html
+++ b/bigs/stocks/templates/stocks/base_generic.html
@@ -16,9 +16,18 @@
 					<h1>Bigs</h1>
 					<h3>세상의 모든 주식정보</h3>
 				</a>
-				<a href="{% url 'login' %}">
-					<h4>로그인</h4>
-				</a>
+
+				{% if user.is_authenticated %}
+					<a href="{% url 'logout' %}">
+						<h4>로그아웃</h4>
+					</a>
+				{% else %}
+					<a href="{% url 'login' %}">
+						<h4>로그인</h4>
+					</a>
+				{% endif %}
+
+
 			</header>
 		{% endblock %}
 
