--- a/bigs/stocks/templates/stocks/index.html
+++ b/bigs/stocks/templates/stocks/index.html
@@ -7,7 +7,11 @@
 			{% for stock in stocks1 %}
 			<div>
 				<h5>종목</h5>
-				<li>종목명: {{stock.name}}</li>
+				{% if user.is_authenticated %}
+					<li>종목명: {{stock.name}}</li>
+				{% else %}
+					<li>종목명: ******</li>
+				{% endif %}
 				<li>수집정보: {{stock.theme}}</li>
 				<li>BIGS 종합점수: {{stock.bigs_score}}</li>
 			</div>
@@ -18,7 +22,11 @@
 			{% for stock in stocks2 %}
 			<div>
 				<h5>종목</h5>
-				<li>종목명: {{stock.name}}</li>
+				{% if user.is_authenticated %}
+					<li>종목명: {{stock.name}}</li>
+				{% else %}
+					<li>종목명: ******</li>
+				{% endif %}
 				<li>수집정보: {{stock.theme}}</li>
 				<li>BIGS 종합점수: {{stock.bigs_score}}</li>
 			</div>
@@ -29,7 +37,11 @@
 			{% for stock in stocks3 %}
 			<div>
 				<h5>종목</h5>
-				<li>종목명: {{stock.name}}</li>
+				{% if user.is_authenticated %}
+					<li>종목명: {{stock.name}}</li>
+				{% else %}
+					<li>종목명: ******</li>
+				{% endif %}
 				<li>수집정보: {{stock.theme}}</li>
 				<li>BIGS 종합점수: {{stock.bigs_score}}</li>
 			</div>
@@ -40,7 +52,11 @@
 			{% for stock in stocks4 %}
 			<div>
 				<h5>종목</h5>
-				<li>종목명: {{stock.name}}</li>
+				{% if user.is_authenticated %}
+					<li>종목명: {{stock.name}}</li>
+				{% else %}
+					<li>종목명: ******</li>
+				{% endif %}
 				<li>수집정보: {{stock.theme}}</li>
 				<li>BIGS 종합점수: {{stock.bigs_score}}</li>
 			</div>
