--- a/bigs/stocks/static/stocks/style.css
+++ b/bigs/stocks/static/stocks/style.css
@@ -1,4 +1,17 @@
+/* 전체 설정 */
 @charset "utf-8";
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+* {
+	font-family: 'Nanum Gothic';
+}
+a {
+	color: black;
+	text-decoration: none;
+}
+a:hover {
+	color: gray;
+	text-decoration: none;
+}
 
 /* 구분을 위한 컬러설정 */
 /*
